--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 
 body {
-  font-family: "Inter", sans-serif;
+  font-family: "Geist", sans-serif;
   @apply text-gray-800;
 }
